@@ -572,15 +572,16 @@ namespace __gnu_cxx
   using std::iterator;
   template<typename _Iterator, typename _Container>
     class __normal_iterator
+      : public iterator<typename iterator_traits<_Iterator>::iterator_category,
+                        typename iterator_traits<_Iterator>::value_type,
+                        typename iterator_traits<_Iterator>::difference_type,
+                        typename iterator_traits<_Iterator>::pointer,
+                        typename iterator_traits<_Iterator>::reference>
     {
     protected:
       _Iterator _M_current;
       
     public:
-      typedef typename iterator_traits<_Iterator>::iterator_category
-                                                              iterator_category;
-      typedef typename iterator_traits<_Iterator>::value_type  value_type;
-
       typedef typename iterator_traits<_Iterator>::difference_type 	
       							       difference_type;
       typedef typename iterator_traits<_Iterator>::reference   reference;
